Fixed bug involving the background covering the entire screen

--- a/css/robotolight.css
+++ b/css/robotolight.css
@@ -21,7 +21,7 @@ body {
     min-height: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100% 100%;
+    background-size: 150% 150%;
     position: relative;
 }
 
